syntax = "proto3";
package leasepb;

import "api/etcdserverpb/rpc.proto";
option go_package = "go.etcd.io/etcd/server/lease/leasepb";


message Lease {
  int64 ID = 1;
  int64 TTL = 2;
  int64 RemainingTTL = 3;
}

message LeaseInternalRequest {
  etcdserverpb.LeaseTimeToLiveRequest LeaseTimeToLiveRequest = 1;
}

message LeaseInternalResponse {
  etcdserverpb.LeaseTimeToLiveResponse LeaseTimeToLiveResponse = 1;
}
